--- a/CrmUpSchool.UILayer/Views/Shared/_EmployeeLayout.cshtml
+++ b/CrmUpSchool.UILayer/Views/Shared/_EmployeeLayout.cshtml
@@ -175,20 +175,20 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-bs-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
+                        <a class="nav-link" data-bs-toggle="collapse" href="/Employee/EmployeeTaskDetail/Index" aria-expanded="false" aria-controls="ui-basic">
                             <i class="mdi mdi-circle-outline menu-icon"></i>
                             <span class="menu-title">Görevlerim</span>
                             <i class="menu-arrow"></i>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../pages/forms/basic_elements.html">
+                        <a class="nav-link" href="/Employee/EmployeeProfile/Index">
                             <i class="mdi mdi-view-headline menu-icon"></i>
                             <span class="menu-title">Ayarlar</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../pages/charts/chartjs.html">
+                        <a class="nav-link" href="/Employee/Message/SendEmail">
                             <i class="mdi mdi-chart-pie menu-icon"></i>
                             <span class="menu-title">Mesajlar</span>
                         </a>
