--- a/CrmUpSchool.UILayer/Views/Register/Index.cshtml
+++ b/CrmUpSchool.UILayer/Views/Register/Index.cshtml
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="~/MajesticAdmin/template/css/style.css">
     <!-- endinject -->
     <link rel="shortcut icon" href="~/MajesticAdmin/template/images/favicon.png" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </head>
 
 <body>
@@ -37,7 +39,7 @@
                             <h6 class="font-weight-light">Hemen birkaç adımda üyeliğini tamamla</h6>
                             <form class="pt-3" method="post">
                                 <div class="form-group">
-                                    <input type="text" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="kullanıcı adınız" asp-for="UserName">
+                                    <input type="text" class="form-control form-control-lg" id="username" placeholder="kullanıcı adınız" asp-for="UserName">
                                 </div>
                                 <div class="form-group">
                                     <input type="text" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="adınız" asp-for="Name">
@@ -58,7 +60,7 @@
                                     <div class="form-check">
                                         <label class="form-check-label text-muted">
                                             <input type="checkbox" class="form-check-input">
-                                            Kuralları okudum kabul ediyorum.
+                                            <a id="rules" href="#">Kuralları</a> okudum kabul ediyorum.
                                         </label>
                                     </div>
                                 </div>
@@ -85,7 +87,17 @@
     <script src="~/MajesticAdmin/template/js/off-canvas.js"></script>
     <script src="~/MajesticAdmin/template/js/hoverable-collapse.js"></script>
     <script src="~/MajesticAdmin/template/js/template.js"></script>
+   
     <!-- endinject -->
 </body>
 
 </html>
+
+<script>$('#rules').click(function () {
+    swal({
+        title: "Rule Definition",
+        text: "RulesRulesRules",
+        icon: "success",
+        button: "OK!",
+    });
+    });</script>
