--- a/CrmUpSchool.UILayer/Views/Shared/_EmployeeLayout.cshtml
+++ b/CrmUpSchool.UILayer/Views/Shared/_EmployeeLayout.cshtml
@@ -175,10 +175,9 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-bs-toggle="collapse" href="/Employee/EmployeeTaskDetail/Index" aria-expanded="false" aria-controls="ui-basic">
+                        <a class="nav-link" href="/Employee/EmployeeTaskDetail/Index">
                             <i class="mdi mdi-circle-outline menu-icon"></i>
                             <span class="menu-title">Görevlerim</span>
-                            <i class="menu-arrow"></i>
                         </a>
                     </li>
                     <li class="nav-item">
