--- a/CrmUpSchool.UILayer/Views/Report/ReportList.cshtml
+++ b/CrmUpSchool.UILayer/Views/Report/ReportList.cshtml
@@ -5,3 +5,6 @@
 
 <h1>Rapor List</h1>
 <a href="/Report/ExcelStatic/" class=" btn btn-outline-warning">Excel Statik Rapor</a>
+<br />
+<br />
+<a href="/Report/DynamicExcel/" class=" btn btn-outline-warning">Excel Dinamik Rapor</a>
