--- a/CrmUpSchool.UILayer/Views/Report/ReportList.cshtml
+++ b/CrmUpSchool.UILayer/Views/Report/ReportList.cshtml
@@ -8,3 +8,6 @@
 <br />
 <br />
 <a href="/Report/DynamicExcel/" class=" btn btn-outline-warning">Excel Dinamik Rapor</a>
+<br />
+<br />
+<a href="/Report/StaticPdfReport/" class=" btn btn-outline-warning">PDF Statik Rapor</a>
