--- a/CrmUpSchool.UILayer/Views/Role/Index.cshtml
+++ b/CrmUpSchool.UILayer/Views/Role/Index.cshtml
@@ -13,6 +13,8 @@
         <th>#</th>
         <th>Rol Adı</th>
         <th>Rol Sil</th>
+        <th>Güncelle</th>
+
     </tr>
     @foreach (var item in Model)
     {
@@ -20,6 +22,7 @@
             <td>@item.Id</td>
             <td>@item.Name</td>
             <td><a href="/Role/DeleteRole/@item.Id" class="btn btn-danger">Sil</a></td>
+            <td><a href="/Role/UpdateRole/@item.Id" class="btn btn-warning">Güncelle</a></td>
         </tr>
     }
 </table>
