--- a/CrmUpSchool.UILayer/Areas/Employee/Views/Message/SendEmail.cshtml
+++ b/CrmUpSchool.UILayer/Areas/Employee/Views/Message/SendEmail.cshtml
@@ -3,6 +3,7 @@
     Layout = "~/Views/Shared/_EmployeeLayout.cshtml";
 }
 
+<h1>Send Mail</h1>
 <form class="form-group" method="post">
     <label>Receiver Mail</label>
     <input type="text" asp-for="ReceiverEmail" class="form-control" />
