--- a/CrmUpSchool.UILayer/Views/Employee/Index.cshtml
+++ b/CrmUpSchool.UILayer/Views/Employee/Index.cshtml
@@ -39,4 +39,4 @@
         </tr>
     }
 </table>
-<a href="/Employee/AddEmployee/" class="btn btn-primary">New Personel</a>
+<a href="/Employee/AddEmployee/" class="btn btn-primary" style="width:200px">Yeni Personel</a>
