--- a/CrmUpSchool.UILayer/Views/EmployeeTask/Index.cshtml
+++ b/CrmUpSchool.UILayer/Views/EmployeeTask/Index.cshtml
@@ -33,4 +33,4 @@
         </tr>
     }
 </table>
-<a href="/EmployeeTask/AddTask/" class="btn btn-outline-info">Yeni Görev Girişi</a>
+<a href="/EmployeeTask/AddTask/" class="btn btn-outline-info" style="width:200px">Yeni Görev Girişi</a>
