--- a/CrmUpSchool.UILayer/Views/Role/Index.cshtml
+++ b/CrmUpSchool.UILayer/Views/Role/Index.cshtml
@@ -26,4 +26,4 @@
         </tr>
     }
 </table>
-<a href="/Role/AddRole/" class="btn btn-primary">Yeni Rol Girişi</a>
+<a href="/Role/AddRole/" class="btn btn-primary" style="width:200px">Yeni Rol Girişi</a>
