--- a/CrmUpSchool.UILayer/Views/Shared/_AdminLayout.cshtml
+++ b/CrmUpSchool.UILayer/Views/Shared/_AdminLayout.cshtml
@@ -24,7 +24,7 @@
         <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
             <div class="navbar-brand-wrapper d-flex justify-content-center">
                 <div class="navbar-brand-inner-wrapper d-flex justify-content-between align-items-center w-100">
-<h2>CRM</h2>
+                    <h2>Admin Panel</h2>
                     <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
                         <span class="mdi mdi-sort-variant"></span>
                     </button>
@@ -168,90 +168,33 @@
             <nav class="sidebar sidebar-offcanvas" id="sidebar">
                 <ul class="nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="/Employee/Employee/Index">
-                            <i class="mdi mdi-home menu-icon"></i>
-                            <span class="menu-title">Employee Panel</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/Category/Index/">
-                            <i class="mdi mdi-star menu-icon"></i>
-                            <span class="menu-title">Departmanlar</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/Announcement/Index/">
-                            <i class="mdi mdi-file-document-box-outline menu-icon"></i>
-                            <span class="menu-title">Duyurular</span>
+                        <a class="nav-link" href="/Admin/AdminCustomer/Index">
+                            <i class="mdi mdi-pen menu-icon"></i>
+                            <span class="menu-title">Müşteri İşlemleri</span>
                         </a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="/Employee/Index/">
-                            <i class="mdi mdi-view-headline menu-icon"></i>
-                            <span class="menu-title">Personeller</span>
+                        <a class="nav-link" href="/Admin/Alert/Index">
+                            <i class="mdi mdi-star menu-icon"></i>
+                            <span class="menu-title">Alarm</span>
                         </a>
                     </li>
+
                     <li class="nav-item">
-                        <a class="nav-link" href="/Customer/Index/">
-                            <i class="mdi mdi-chart-pie menu-icon"></i>
-                            <span class="menu-title">Müşteriler</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/EmployeeTask/Index/">
-                            <i class="mdi mdi-grid-large menu-icon"></i>
-                            <span class="menu-title">Görevler</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/Role/Index/">
-                            <i class="mdi mdi-emoticon menu-icon"></i>
-                            <span class="menu-title">Roller</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/Report/ReportList/">
+                        <a class="nav-link" href="/Admin/Contact/AddContact">
                             <i class="mdi mdi-file-document-box-outline menu-icon"></i>
-                            <span class="menu-title">Dosya İşlemleri</span>
+                            <span class="menu-title">İletişim Sayfası</span>
                         </a>
                     </li>
-                    @*<li class="nav-item">
-                        <a class="nav-link" href="../../documentation/documentation.html">
-                            <i class="mdi mdi-file-document-box-outline menu-icon"></i>
-                            <span class="menu-title">Grafikler</span>
-                        </a>
-                    </li>
+
                     <li class="nav-item">
-                        <a class="nav-link" href="../../documentation/documentation.html">
-                            <i class="mdi mdi-file-document-box-outline menu-icon"></i>
-                            <span class="menu-title">Mail Gönderme</span>
+                        <a class="nav-link" href="/Home/Index/">
+                            <i class="mdi mdi-home menu-icon"></i>
+                            <span class="menu-title">Ana sayfa</span>
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../../documentation/documentation.html">
-                            <i class="mdi mdi-file-document-box-outline menu-icon"></i>
-                            <span class="menu-title">Gelen Mesajlar</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../../documentation/documentation.html">
-                            <i class="mdi mdi-file-document-box-outline menu-icon"></i>
-                            <span class="menu-title">Giden Mesajlar</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../../documentation/documentation.html">
-                            <i class="mdi mdi-file-document-box-outline menu-icon"></i>
-                            <span class="menu-title">Yeni Mesaj</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../../documentation/documentation.html">
-                            <i class="mdi mdi-file-document-box-outline menu-icon"></i>
-                            <span class="menu-title">Api Linki</span>
-                        </a>
-                    </li>*@
+
                 </ul>
             </nav>
             <!-- partial -->
