--- a/CrmUpSchool.UILayer/Views/Shared/_EmployeeLayout.cshtml
+++ b/CrmUpSchool.UILayer/Views/Shared/_EmployeeLayout.cshtml
@@ -24,8 +24,7 @@
         <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
             <div class="navbar-brand-wrapper d-flex justify-content-center">
                 <div class="navbar-brand-inner-wrapper d-flex justify-content-between align-items-center w-100">
-                    <a class="navbar-brand brand-logo" href="../../index.html"><img src="~/MajesticAdmin/template/images/logo.svg" alt="logo" /></a>
-                    <a class="navbar-brand brand-logo-mini" href="../../index.html"><img src="~/MajesticAdmin/template/images/logo-mini.svg" alt="logo" /></a>
+<h2>Employee</h2>
                     <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
                         <span class="mdi mdi-sort-variant"></span>
                     </button>
@@ -169,13 +168,13 @@
             <nav class="sidebar sidebar-offcanvas" id="sidebar">
                 <ul class="nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="../../index.html">
+                        <a class="nav-link" href="/Employee/Dashboard/Index">
                             <i class="mdi mdi-home menu-icon"></i>
                             <span class="menu-title">Dashboard</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/Employee/EmployeeTaskDetail/Index">
+                        <a class="nav-link" href="/Employee/EmployeeTask/EmployeeTaskListByProfile">
                             <i class="mdi mdi-circle-outline menu-icon"></i>
                             <span class="menu-title">Görevlerim</span>
                         </a>
@@ -183,12 +182,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/Employee/EmployeeProfile/Index">
                             <i class="mdi mdi-view-headline menu-icon"></i>
-                            <span class="menu-title">Ayarlar</span>
+                            <span class="menu-title">Profil Ayarlar</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/Employee/Message/SendEmail">
-                            <i class="mdi mdi-chart-pie menu-icon"></i>
+                        <a class="nav-link" href="/Employee/Message/SendMessage">
+                            <i class="mdi mdi-message menu-icon"></i>
                             <span class="menu-title">Mesajlar</span>
                         </a>
                     </li>
@@ -199,14 +198,14 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../pages/icons/mdi.html">
+                        <a class="nav-link" href="/Employee/Chart/Index">
                             <i class="mdi mdi-emoticon menu-icon"></i>
-                            <span class="menu-title">Ajanda</span>
+                            <span class="menu-title">Grafikler</span>
                         </a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="../../documentation/documentation.html">
+                        <a class="nav-link" href="/Employee/Message/SendEmail">
                             <i class="mdi mdi-file-document-box-outline menu-icon"></i>
                             <span class="menu-title">Mail Gönder</span>
                         </a>
