--- a/CrmUpSchool.UILayer/Areas/Employee/Views/Chart/Index.cshtml
+++ b/CrmUpSchool.UILayer/Areas/Employee/Views/Chart/Index.cshtml
@@ -8,7 +8,7 @@
 <div class="row">
     <div class="col-lg-12">
         <div id="chartdiv" style="width:800px; height:600px">
-            <h2>Burası Grafik Alanıdır</h2>
+            <h2>Şirket İçi Çalışan Dağılımı</h2>
         </div>
     </div>
 </div>
