--- a/CrmUpSchool.UILayer/Areas/Employee/Views/EmployeeTaskDetail/Index.cshtml
+++ b/CrmUpSchool.UILayer/Areas/Employee/Views/EmployeeTaskDetail/Index.cshtml
@@ -1,17 +1,39 @@
 ﻿@model List<EmployeeTaskDetail>
+
+
 @{
     Layout = "~/Views/Shared/_EmployeeLayout.cshtml";
 }
+
+
+
+<style>
+    .fancy-list li {
+        list-style: none; /* remove default bullet points */
+        font-size: 20px; /* increase font size */
+        line-height: 1.5; /* increase line height */
+        padding: 10px; /* add padding */
+        margin-bottom: 10px; /* add space between items */
+        border: 2px solid blue; /* add a border */
+        border-radius: 5px; /* round the corners of the border */
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* add a subtle shadow */
+
+        width: 400px; /* set the width to 400 pixels */
+    }
+</style>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-F5n5yDY6UeV8Wp+BnHbZ9h4Z4gL8jKxmCzGmf0lcwSJb8WUnQ0fEZM9BQh1fE8zNj3OvDPiOeYcYB/8tRnm+cjg==" crossorigin="anonymous" />
+
+
 <h1>Görev Detayları</h1>
 
 @if (Model.Count != 0)
 {
-    <table>
+    <ul class="fancy-list">
         @foreach (var item in Model)
         {
-            <tr>- @item.Description</tr>
+            <li>@item.Date - @item.Description</li>
         }
-    </table>
+    </ul>
 }
 else
 {
