--- a/CrmUpSchool.UILayer/Areas/Employee/Views/Message/SendMessage.cshtml
+++ b/CrmUpSchool.UILayer/Areas/Employee/Views/Message/SendMessage.cshtml
@@ -1,9 +1,15 @@
 ﻿@model Message
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
 
 @{
     Layout = "~/Views/Shared/_EmployeeLayout.cshtml";
 }
+
+<h1>
+    <i class="fas fa-envelope"></i>
+    Send Message
+</h1>
 
 <form class="form-group" method="post">
     <label>Receiver Mail</label>
@@ -15,5 +21,5 @@
     <label>Message</label>
     <textarea asp-for="MessageContext" id="w3review" name="w3review" rows="4" cols="50" class="form-control"></textarea>
     <br />
-    <button class="btn btn-warning">Send</button>
+    <button class="btn btn-success">Send</button>
 </form>
