--- a/CrmUpSchool.UILayer/Views/Announcement/Index.cshtml
+++ b/CrmUpSchool.UILayer/Views/Announcement/Index.cshtml
@@ -22,10 +22,10 @@
             <td>@item.AnnouncementID</td>
             <td>@item.Title</td>
             <td>@item.Date</td>
-            <td><a href="#" class="btn btn-outline-danger">Sil</a></td>
-            <td><a href="#" class="btn btn-outline-success">Güncelle</a></td>
-            <td><a href="#" class="btn btn-outline-dark">Duyuruyu Aç</a></td>
+            <td><a href="/Announcement/Delete/@item.AnnouncementID" class="btn btn-outline-danger">Sil</a></td>
+            <td><a href="/Announcement/Update/@item.AnnouncementID" class="btn btn-outline-success">Güncelle</a></td>
+            <td><a href="/Announcement/Detail/@item.AnnouncementID" class="btn btn-outline-dark">Duyuruyu Aç</a></td>
         </tr>
     }
 </table>
-<a href="#" class="btn btn-outline-primary">Yeni Duyuru Ekle</a>
+<a href="/Announcement/NewAnnouncement/" class="btn btn-outline-primary" style="width:200px">Yeni Duyuru Ekle</a>
