--- a/CrmUpSchool.UILayer/Views/Category/Index.cshtml
+++ b/CrmUpSchool.UILayer/Views/Category/Index.cshtml
@@ -13,17 +13,15 @@
     </tr>
 
     @foreach (var item in Model)
-        {
-            <tr>
-                <td>@item.CategoryId</td>
-                <td>@item.CategoryName</td>
-                <td><a href="#" class="btn btn-warning">Durum</a></td>
-                <td><a href="#" class="btn btn-danger">Sil</a></td>
-                <td><a href="#" class="btn btn-primary">Güncelle</a></td>
-            </tr>
-        }
-
-
-
+    {
+        <tr>
+            <td>@item.CategoryId</td>
+            <td>@item.CategoryName</td>
+            <td><a href="/Category//" class="btn btn-warning">Durum</a></td>
+            <td><a href="/Category/DeleteCategory/@item.CategoryId" class="btn btn-danger">Sil</a></td>
+            <td><a href="/Category/UpdateCategory/@item.CategoryId" class="btn btn-primary">Güncelle</a></td>
+        </tr>
+    }
 
 </table>
+<a href="/Category/AddCategory/" class="btn btn-primary" style="width:200px">New Category</a>
