--- a/CrmUpSchool.UILayer/Views/Home/Index.cshtml
+++ b/CrmUpSchool.UILayer/Views/Home/Index.cshtml
@@ -3,6 +3,13 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+   
+    <a href="/Employee/Index/" class=" btn btn-outline-warning" style="width: 200px; background-color: blue; color: white; margin: 10px;">CRM Index</a>
+    <br />
+    <br />
+    <a href="/Employee/Employee/Index" class=" btn btn-outline-warning" style="width: 200px; background-color: green; color: white; margin: 10px;">Employee Area</a>
+    <br />
+    <br />
+    <a href="/Admin/AdminCustomer/Index" class=" btn btn-outline-warning" style="width: 200px; background-color: red; color: white; margin: 10px;">Admin Area</a>
+
 </div>
