--- a/CrmUpSchool.UILayer/Views/Shared/Components/_ChartDashboardPartial/Default.cshtml
+++ b/CrmUpSchool.UILayer/Views/Shared/Components/_ChartDashboardPartial/Default.cshtml
@@ -8,7 +8,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div id="chartdiv" style="width:800px; height:600px">
-                            <h2>Burası Grafik Alanıdır</h2>
+                            <h2>Grafik Alanı</h2>
                         </div>
                     </div>
                 </div>
@@ -22,7 +22,8 @@
                                 type: 'GET',
                                 url: '/Chart/ProductChart/',
                                 success: function (chartsdata) {
-                                    var Data = chartsdata.jsonlist;
+                                    var Data = chartsdata.jsonList;
+                                    console.log(Data,"dt")
                                     var data = new google.visualization.DataTable();
                                     data.addColumn('string', 'productname');
                                     data.addColumn('number', 'productvalue');
