role assignment for home page, change routes

--- a/CrmUpSchool.UILayer/Views/Home/Index.cshtml
+++ b/CrmUpSchool.UILayer/Views/Home/Index.cshtml
@@ -64,9 +64,7 @@
                                 </button>
                                 <div class="collapse navbar-collapse" id="navbarsExample04">
                                     <ul class="navbar-nav mr-auto">
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="/Login/Index/">LOGIN</a>
-                                        </li>
+
                                         <li class="nav-item">
                                             <a class="nav-link" href="/Employee/Index/">MANAGER</a>
                                         </li>
@@ -75,6 +73,9 @@
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="/Admin/AdminCustomer/Index">ADMIN</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="/Login/LOGOUT/">LOGOUT</a>
                                         </li>
                                     </ul>
                                 </div>
