--- a/CrmUpSchool.UILayer/Views/Login/Index.cshtml
+++ b/CrmUpSchool.UILayer/Views/Login/Index.cshtml
@@ -36,14 +36,14 @@
                             <div class="brand-logo">
                                 <img src="~/MajesticAdmin/template/images/logo.svg" alt="logo">
                             </div>
-                            <h4>Hello! let's get started</h4>
-                            <h6 class="font-weight-light">Sign in to continue.</h6>
+                            <h4>Hoşgeldin! Haydi Başlayalım</h4>
+                            <h6 class="font-weight-light">Devam etmek için giriş yap.</h6>
                             <form class="pt-3" method="post">
                                 <div class="form-group">
-                                    <input type="text" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Kullanıcı adınız" asp-for="UserName">
+                                    <input type="text" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Kullanıcı Adı" asp-for="UserName">
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Şifreniz" asp-for="PasswordHash">
+                                    <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Şifre" asp-for="PasswordHash">
                                 </div>
 
                                 <i class="fas fa-lock"></i><a href="/User/ForgotPassword/"> Şifreni mi unuttun?</a>
