--- a/CrmUpSchool.UILayer/Views/Report/ReportList.cshtml
+++ b/CrmUpSchool.UILayer/Views/Report/ReportList.cshtml
@@ -3,10 +3,10 @@
     Layout = "~/Views/Shared/_CrmLayout.cshtml";
 }
 <h1>Rapor List</h1>
-<a href="/Report/ExcelStatic/" class=" btn btn-outline-warning" style="width: 200px; background-color: blue; color: white; margin: 10px;">Excel Statik Rapor</a>
+<a href="/Report/ExcelStatic/" class=" btn btn-warning" style="width: 200px; margin: 10px;">Excel Statik Rapor</a>
 <br />
 <br />
-<a href="/Report/DynamicExcel/" class=" btn btn-outline-warning" style="width: 200px; background-color: green; color: white; margin: 10px;">Excel Dinamik Rapor</a>
+<a href="/Report/DynamicExcel/" class=" btn btn-success" style="width: 200px; margin: 10px;">Excel Dinamik Rapor</a>
 <br />
 <br />
-<a href="/Report/StaticPdfReport/" class=" btn btn-outline-warning" style="width: 200px; background-color: red; color: white; margin: 10px;">PDF Statik Rapor</a>
+<a href="/Report/StaticPdfReport/" class=" btn btn-primary" style="width: 200px; margin: 10px;">PDF Statik Rapor</a>
